--- a/src/components/VRSection.module.css
+++ b/src/components/VRSection.module.css
@@ -48,29 +48,31 @@
 
 @media (max-width: 768px) {
   .vrImg {
-    width: 50rem;
+    width: 32rem;
     height: 40rem;
     left: 4%;
   }
 
   .vrText {
-    top: 79%;
-    right: 1.6%;
-    width: 50rem;
+    top: 100%;
+    left: 12%;
+    width: 30rem;
     height: auto;
     justify-content: flex-start;
     padding: 4rem 0;
   }
 
   .vrText div {
-    width: 90%;
+    width: 100%;
+    background-color: 90%;
   }
 
   .vrText h2 {
-    font-size: 5rem;
+    font-size: 3rem;
+    line-height: 1.3;
   }
 
   .vrText p {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 }
