--- a/src/components/CreationSection.module.css
+++ b/src/components/CreationSection.module.css
@@ -3,6 +3,7 @@
   margin: 20rem auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 8rem;
 }
 
@@ -21,11 +22,16 @@
 
 @media (max-width: 768px) {
   .creation {
-    margin-top: 35rem;
+    margin-top: 25rem;
+    margin-bottom: 8rem;
   }
 
   .creationHeading {
     justify-content: center;
+  }
+
+  .creationHeading h2 {
+    font-size: 4rem;
   }
 
   .creationHeading button {
