--- a/src/components/Gallary.module.css
+++ b/src/components/Gallary.module.css
@@ -57,6 +57,10 @@
   z-index: 999;
 }
 
+.gallaryContainer button {
+  display: none;
+}
+
 @media (max-width: 768px) {
   .gallaryContainer {
     grid-template-columns: 1fr;
@@ -65,6 +69,10 @@
     font-size: 2.4rem;
     left: 25%;
     width: 14rem;
+  }
+  .gallaryContainer button {
+    display: block;
+    justify-self: center;
   }
 
   .gallary {
