--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,18 +1,13 @@
 .header {
-  width: 133rem;
-  top: 7.8rem;
-  left: 50%;
-  transform: translateX(-48%);
+  width: 100%;
+  padding: 7.5rem 15rem;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  position: absolute;
-  z-index: 999;
 }
 
 .toggleIcon {
-  display: none;
   cursor: pointer;
+  display: none;
 }
 .logo {
   width: 22.5rem;
@@ -54,19 +49,48 @@
 
 @media (max-width: 768px) {
   .header {
-    width: 32rem;
+    padding: 7.5rem 3rem;
   }
+
   .header nav {
     display: none;
   }
 
+  .header.navOpen nav {
+    display: block;
+    position: absolute;
+    background-color: var(--color-black);
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 100vh;
+  }
+
+  .header.navOpen .navList {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding: 0 3.5rem;
+    text-transform: uppercase;
+    gap: 2rem;
+  }
+
+  .navList li a:link,
+  .navList li a:visited {
+    font-family: var(--font-secondary);
+    font-size: 2.4rem;
+    font-weight: 300;
+  }
+
   .logo {
     width: 16rem;
+    z-index: 999;
   }
 
   .toggleIcon {
     display: block;
-
+    z-index: 999;
     display: inline-block;
   }
 }
